--- a/transition.css
+++ b/transition.css
@@ -305,10 +305,10 @@ th, td {
 }
 
 .longtext {
-  font-size=14px;
+  font-size: 14px;
 }
 .longertext {
-  font-size=12px;
+  font-size: 12px;
 }
 
 
